--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-  <p>Hello, World!</p>  
+  <p>Hello, World!</p>
+  <p>This is a demo page </p> 
 </body>
 </html>
